--- a/build.gradle
+++ b/build.gradle
@@ -21,3 +21,11 @@ dependencies {
 test {
         useJUnitPlatform()
 }
+
+bootRun.environment([
+        "PAGE_CONTENT": "YellowPages",
+])
+
+test.environment([
+        "PAGE_CONTENT": "YellowPages",
+])
