--- a/deployment/pages-deployment.yaml
+++ b/deployment/pages-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: pages
-    tier: service
+    tier: monitor
   name: pages
   namespace: brixton
 spec:
@@ -11,16 +11,16 @@ spec:
   selector:
     matchLabels:
       app: pages
-      tier: service
+      tier: monitor
   strategy: {}
   template:
     metadata:
       labels:
         app: pages
-        tier: service
+        tier: monitor
     spec:
       containers:
-        - image: piresgunner/pages:service
+        - image: piresgunner/pages:monitor
           name: pages
           ports:
             - containerPort: 8080
@@ -31,7 +31,7 @@ spec:
                   name: pages-config-map
                   key: PAGE_CONTENT
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:mysql://pages-mysql/pages
+              value: jdbc:mysql://pages-mysql/pages?useSSL=false
             - name: SPRING_DATASOURCE_USERNAME
               value: "root"
             - name: SPRING_DATASOURCE_PASSWORD
@@ -39,3 +39,31 @@ spec:
                 secretKeyRef:
                   name: mysql-pass
                   key: password
+            - name: DEBUG
+              value: "true"
+            - name: LOGGING_FILE_NAME
+              value: "brixton/logs/app.log"
+            - name: LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_WEB
+              value: debug
+            - name: LOGGING_LEVEL_ROOT
+              value: debug
+            - name: MANAGEMENT_ENDPOINTS_WEB_EXPOSURE_INCLUDE
+              value: "*"
+          volumeMounts:
+            - name: node-dir
+              mountPath: /brixton
+          readinessProbe:
+            tcpSocket:
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 30
+          livenessProbe:
+            httpGet:
+              path: /actuator/health
+              port: 8080
+            initialDelaySeconds: 15
+            periodSeconds: 30
+      volumes:
+        - name: node-dir
+          hostPath:
+            path: /brixton
